# gainmaxxing

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
agent/: db.py  graph.py
agent/tools/: __init__.py  _shared.py  entries.py  meals.py
docs/: CONTEXT.md
scripts/: bootstrap.sh
server/: app.py
skills/: BEHAVIOR.md  CATALOG.md  PROFILE.example.md
sql/: schema.sql
